--- a/data/attachments/ba27e2c40d314cc2.md
+++ b/data/attachments/ba27e2c40d314cc2.md
@@ -8,14 +8,21 @@
 ```
 Error: expect(received).toBe(expected) // Object.is equality
 
-Expected: 1
-Received: 2
-    at /home/runner/_work/QA.GURU_diplom/QA.GURU_diplom/specs/api.spec.js:158:39
+Expected: 200
+Received: 500
+    at /home/runner/_work/QA.GURU_diplom/QA.GURU_diplom/specs/api.spec.js:151:44
 ```
 
 # Test source
 
 ```ts
+   51 |       // шаг 2. отфильтровываем Engagements по клиентскому коду (пользовательский кейс)
+   52 |       const engResponse = await request.get(`${BASE_URL}/api/engagements?clientIds=${selectedClientId}`, {
+   53 |           headers: {
+   54 |             "Authorization": `Bearer ${authToken}`,
+   55 |             "Accept": "application/json"
+   56 |           }
+   57 |       });
    58 |       expect(engResponse.status()).toBe(200);
    59 |       // список никогда не должен быть пустым, потому что клиентский код присваивается при первом создании 
    60 |       // TODO – добавить вывод на случай ошибки с пустым списком
@@ -109,15 +116,15 @@ Received: 2
   148 |         }
   149 |       });
   150 |       
-  151 |       expect(teamMembersResponse.status()).toBe(200);
+> 151 |       expect(teamMembersResponse.status()).toBe(200);
+      |                                            ^ Error: expect(received).toBe(expected) // Object.is equality
   152 |       const teamMembers = await teamMembersResponse.json();
   153 |       
   154 |       // шаг 2. сравниваем данные current user и списка команды
   155 |       // current user берем из переменных, которые использовали при авторизации
   156 |   
   157 |       // Проверяем, что в списке только один участник
-> 158 |       expect(teamMembers.data.length).toBe(1);
-      |                                       ^ Error: expect(received).toBe(expected) // Object.is equality
+  158 |       expect(teamMembers.data.length).toBe(1);
   159 |       
   160 |       // Проверяем, что username участника совпадает с текущим пользователем
   161 |       expect(teamMembers.data[0].user.username).toBe(AUTH_DATA.username);
